--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abrar Mojahid Rafi</title>
+    <link rel="icon" type="image/png" href="./src/assets/bracuSmile.jpg" />
   </head>
   <body>
     <div id="root"></div>
